Bug 162190 - Navigator cannot be closed by command+W without closing the main window
Summary: Navigator cannot be closed by command+W without closing the main window
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.2.4.2 release
Hardware: All macOS (All)
: medium minor
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:25.2.0 target:24.8.0.3
Keywords:
: 133728 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-07-25 11:48 UTC by Faisal
Modified: 2024-08-22 04:32 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Faisal 2024-07-25 11:48:21 UTC
Description:
The navigator dialog window cannot be closed by pressing command+W on macOS without closing the entire main window.

Steps to Reproduce:
1. Open a new document in Writer, Impress or Calc
2. Click on View > Navigator
3. Press command + W

Actual Results:
The navigator window is closed along with the main document window

Expected Results:
Only the navigator window should close, which matches user expectation on macOS


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 24.2.4.2 (AARCH64) / LibreOffice Community
Build ID: 51a6219feb6075d9a4c46691dcfe0cd9c4fff3c2
CPU threads: 12; OS: macOS 14.5; UI render: Skia/Raster; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 1 Patrick (volunteer) 2024-07-26 00:09:57 UTC
Additionally, pressing Command-W does not close any LibreOffice modal dialogs such as the About or Options dialogs.

I will read through the code and see if I can figure out what is causing this bug.
Comment 2 Commit Notification 2024-07-27 01:07:17 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b147debad0cb980317c6915382a12f8dfcef6dfb

tdf#162190 handle Command-w

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Patrick (volunteer) 2024-07-27 01:10:55 UTC
I have committed a fix this bug. The fix should be in tomorrow's (28 July 2024) nightly master builds:

https://dev-builds.libreoffice.org/daily/master/current.html

Note for macOS testers: the nightly master build installer does not overwrite any LibreOffice official versions. Instead, it will be installed as a separate application called "LibreOfficeDev" in the /Applications folder.

Because this is a "test" build, you will need to do the following steps before you launch the LibreOfficeDev application:

1. Go to the Finder and navigate to the /Applications/Utilities folder
2. Launch the "Terminal" application
3. Paste the following command in the Terminal application window and press the Return key to execute the command:

   xattr -d com.apple.quarantine /Applications/LibreOfficeDev.app
Comment 4 Commit Notification 2024-07-27 02:11:30 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/fa75a75eb7e44a50ce59273f154d9de88be1c7ed

tdf#162190 handle Command-w

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Faisal 2024-07-30 10:29:49 UTC
Cannot repro on nightly. Thanks!
Comment 6 Commit Notification 2024-08-08 14:13:44 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-0":

https://git.libreoffice.org/core/commit/5857c5b51689fb3c67b06dfa5c4bf8f22ffb13dc

tdf#162190 handle Command-w

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Buovjaga 2024-08-22 04:32:02 UTC
*** Bug 133728 has been marked as a duplicate of this bug. ***