tdf#162190 handle Command-w

On macOS, Command-w should attempt to close the key window.

Also, pressing Command-m would fail to close the key window
due to the same cause as tdf#162010 if the resulting key
event was an input method event.

Change-Id: I0d90547d7a0833bcc18b36f6d888e1065e91ec57
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171086
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins
(cherry picked from commit b147debad0cb980317c6915382a12f8dfcef6dfb)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171042
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Patrick Luby <guibomacdev@gmail.com>